hard-gists/6003874/run.log
=== Docker Run Log for 6003874 ===
Started at: Mi 29. Okt 16:17:40 CET 2025

[2025-10-29 16:17:41] START: Running container for 6003874
[2025-10-29 16:17:41] SUCCESS: Container 9c0faada6486f716015c4ee15ce7b505c47e3c127eafec01ad44a7c94166430f started for 6003874
=== Container logs for 6003874 ===
  File "/snippet.py", line 43
    print "[+] Processing range: %x - %x" % (selected[1],selected[2])
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6003874 ===
[2025-10-29 16:17:43] INFO: Container 9c0faada6486f716015c4ee15ce7b505c47e3c127eafec01ad44a7c94166430f has stopped
